--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,191 @@
-.App {
-  text-align: center;
+body{
+  font-family: Verdana, Geneva, sans-serif;
+  background-color: #81C3F6;
+  max-width: 100%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+  font-size: 75px;
+  padding: 0;
+  line-height: 0;
+  white-space: nowrap;
 }
 
-.App-link {
-  color: #61dafb;
+.grid_container {
+  display: grid;
+  width:100%;
+  height: auto;
+  grid-template-columns: 60% 20% 20%;
+  padding-bottom: 40px;
+} 
+
+.vert_menu {
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img.aside
+{
+  width:100%;
+  height:auto;
 }
+img.news
+{
+  width:auto;
+  height:250px;
+}
+
+img.pup{
+  width:100%;
+  height:auto;
+  position: top;
+}
+
+img.training{
+  width:100%;
+  height:auto;
+  position: top;
+}
+
+
+
+.column_pics
+{
+  width:100%;
+  height:auto;
+  position:relative;
+}
+
+
+.carousel-container {
+  position: relative; 
+  display: inline-block; 
+}
+
+.bg {
+  width: 98%;
+  height: 20%;
+  position: absolute;
+  bottom:0;
+  background-color: white;
+  opacity: 60%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 1%;
+}
+
+h6 {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.navigation {
+  align-items: right;
+  text-align: right;
+  position: relative;
+  line-height: 2;
+}
+
+.sponsers{
+  position: absolute;
+  bottom: 0;
+  right:0;
+  align-items: right;
+  text-align: right;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.searchflex {
+  display: flex;
+  margin-left:auto;
+  max-width: 203px;
+  border: solid;
+  border-width: thin;
+}
+
+.search input[type=text] {
+  float: right;
+  font-size: 18px;
+  border: none;
+}
+
+.searchbtn {
+  background: rgb(187, 185, 185);
+  border: none;
+  cursor: pointer;
+}
+
+.navbtn {
+  width: 20%;
+  background-color: #81C3F6;
+  font-weight: bold;
+  font-size: 18px;
+  border: 0;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.foot-container {
+  display: grid;
+  grid-template-columns: 20% 55% 25%;
+  width: 100%;
+  font-size: 14px;
+  text-wrap: wrap;
+  padding-bottom: 50px;
+}
+
+.newsletter {
+  display:flex;
+  align-items: flex-start;
+  text-wrap: wrap;
+  width: 100%;
+  height: auto;
+}
+
+.form {
+  display: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.asideContent {
+  display: none;
+}
+
+.weather-widget {
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f5f5f5;
+}
+
+.weather-widget h2 {
+  margin-top: 0;
+}
+
+.weather-widget p {
+  margin: 0;
+}
+
+.weather-widget p:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+
